kubernetes/applications/pterodactyl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pterodactyl-panel
  namespace: pterodactyl
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - panel.apps.lab.sirnotethan.uk
      secretName: apps-prod-wildcard-tls
  rules:
    - host: panel.apps.lab.sirnotethan.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pterodactyl-panel
                port:
                  number: 80
